--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,15 @@ minimal_mistakes_skin    : "neon" # "default" # "air", "aqua", "contrast", "dark
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "RYLYNN's Blog"
+title                    : "라일린의 개발 블로그 :D"
 title_separator          : "-"
-subtitle                 : "Since 2021" # site tagline that appears below site title in masthead
-name                     : "Dong-Woo Jeong"
-description              : "C/C++ MFC OpenCV CUDA"
+subtitle                 : # site tagline that appears below site title in masthead
+name                     : "RYLYNN"
+description              : "An amazing website."
 url                      : "https://dev-rylynn.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : " " # the subpath of your site, e.g. "/blog"
-repository               : "Dev-RYLYNN/Dev-RYLYNN.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/crop.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
