--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "DongWoo Jeong"
   avatar           : "/assets/images/Crop.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "C/C++ CUDA OpenCV CUDA..."
+  bio              : "C/C++ MFC OpenCV CUDA..."
   location         : "Korea, Somewhere"
   email            :
   links:
@@ -130,7 +130,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/Dev-RYLYNN"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -210,7 +210,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
