--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://dev-RYLYNN.github.io" # the base hostname & 
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/dev-RYLYNN" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/Teaser.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/Crop.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/Teaser.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -94,8 +94,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "DongWoo Jeong"
-  avatar           : "/assets/images/Crop.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  name             : "JDW"
+  avatar           : "/assets/images/Teaser.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "C/C++ MFC OpenCV CUDA..."
   location         : "Korea, Somewhere"
   email            :
@@ -280,3 +280,11 @@ defaults:
       comments: # true
       share: true
       related: true
+
+# _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"
